# parr-prompt

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
parr_prompt/: __init__.py  __main__.py  cli.py  ensemble.py  env_loader.py  providers.py  web_app.py
parr_prompt/assets/: style.css
